FAQ popup alignment and height issue resolved

--- a/app/assets/stylesheets/campaigns.css.scss
+++ b/app/assets/stylesheets/campaigns.css.scss
@@ -463,11 +463,13 @@
   }
   
   .mobile_model{
-    width: 48%;
-    min-width: 300px;
+   // width: 48%;
+   // min-width: 300px;
+      min-height: 380px;
     
     .faq_content{
       width: 100%;
+      min-height: 380px;
     }
   }
   .secure_logo{
@@ -551,7 +553,8 @@
     }
   }
   .mobile_model{
-    margin-top: -70%;
+    width: 93% !important;
+   // margin-top: -60%;
     margin-left: -47%;
   }
   
@@ -559,15 +562,15 @@
 @media only screen and (max-height: 480px)
 {
  .mobile_model{
-    margin-top: -55%;
-    margin-left: -47%;
+    //margin-top: -55%;
+    //margin-left: -47%;
   } 
 }
 @media only screen and (min-height: 481px) and (max-height: 568px)
 {
  .mobile_model{
-    margin-top: -70%;
-    margin-left: -47%;
+    //margin-top: -70%;
+    //margin-left: -47%;
   } 
 }
 @media only screen and (min-width: 481px) and (max-width: 640px)
@@ -603,8 +606,9 @@
     height: 320px;
   }*/
   .mobile_model{
-    margin-left: -25%;
-    margin-top: -20%;
+    width: 80% !important;
+    margin-left: -40% !important;
+    //margin-top: -20%;
   }
 }
 @media only screen and (min-width: 641px) and (max-width: 799px)
